# datausa-pytesseract

./: .dockerignore  .env  .gitignore  Caddyfile  Dockerfile  README.md  app.py  caddy.Dockerfile  cloudbuild-caddy.yml  cloudbuild.yml  compose.yaml  deploy_to_vm.sh  docker-entrypoint.sh  logging.json  pyproject.toml  requirements.txt
app/: __init__.py
build-explorer/: index.html  vite.config.js
calcs/: dependencies.py  response.py
etc/: logging.json
explorer/: index.html
helm/: arkansas-cache.yaml  arkansas.yaml  boston.yaml  cambridge.yaml  delaware.yaml  development.yaml  elpaso.yaml  fargo.yaml  production.yaml  staging.yaml  values.yaml
incomplete_schemes/: acs_ygl_language_spoken_at_home_by_english_ability_2016_1.xml  acs_ygl_language_spoken_at_home_by_english_ability_2016_5.xml  acs_ygpsar_poverty_by_gender_age_race_1.xml  acs_ygpsar_poverty_by_gender_age_race_5.xml
schema/: acs_health_coverage_s_1.xml  acs_health_coverage_s_5.xml  acs_yg_gini_1.xml  acs_yg_household_income_1.xml  acs_yg_household_income_5.xml  acs_yg_housing_median_value_1.xml  acs_yg_housing_median_value_5.xml  acs_ygc_citizenship_status_1.xml  acs_ygc_citizenship_status_5.xml  acs_ygcs_median_age_by_citizenship_status_by_gender_1.xml  acs_ygf_place_of_birth_for_foreign_born_5.xml  acs_ygh_health_care_coverage_overall_1.xml  acs_ygh_health_care_coverage_overall_5.xml  acs_ygh_homeowners_with_mortgage_spending_30_percent_on_costs_1.xml  acs_ygh_households_with_no_internet_2016_1.xml  acs_ygh_households_with_no_internet_2016_5.xml  acs_ygh_occupied_households_lacking_kitchen_1.xml  (+70 more)
(+130 files in other folders)
