[project]
name = "datausa-tesseract"
version = "0.4.0"
description = "tesseract-olap server for DataUSA"
requires-python = ">=3.10"
authors = [
  {name = "Jelmy Hermosilla", email = "jelmy@datawheel.us"},
  {name = "Francisco Abarzua", email = "francisco@datawheel.us"},
  {name = "Samuel Osorio", email = "samuel@datawheel.us"},
]
readme = "README.md"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "logiclayer>=0.4.4",
    "logiclayer-complexity>=0.6.14",
    "tesseract-olap[clickhouse,redis]>=0.18.8",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "uvicorn[standard]>=0.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datausa"]

[tool.ruff.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.params.Depends",
    "fastapi.params.Query",
]
